Added observer pattern.

--- a/Bank/Bank.csproj
+++ b/Bank/Bank.csproj
@@ -44,11 +44,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BankModel\CreditCard.cs" />
-    <Compile Include="BankModel\CreditCardFactory.cs" />
+    <Compile Include="BankModel\CreditCardAbstractFactory.cs" />
     <Compile Include="BankModel\Client.cs" />
     <Compile Include="BankModel\AbstractClientRepository.cs" />
     <Compile Include="BankModel\AbstractCreditCardRepository.cs" />
     <Compile Include="BankModel\AbstractRepositoryFactory.cs" />
+    <Compile Include="Models\Transaction.cs" />
     <Compile Include="Business\BusinessBlackCreditCard.cs" />
     <Compile Include="Business\BusinessClient.cs" />
     <Compile Include="Business\BusinessFactory.cs" />
